<resources>
    <string name="app_name">ChatClient</string>

    <string name="preferences">Настройки</string>

    <string name="address_title">Адрес:</string>
    <string name="address_dialog_title">Введите адрес:</string>
    <string name="port_title">Порт:</string>
    <string name="port_dialog_title">Введите порт:</string>
    <string name="default_port">8080</string>
    <string name="default_ip">192.168.1.3</string>

    <string name="history_title">История:</string>

    <string name = "stub_text">Выберите собеседника</string>

    <string name="password_hint">password</string>
    <string name="login_hint">login</string>
    <string name="message_hint">введите сообщение</string>
    <string name="login_button">login</string>
    <string name="send_button">send</string>

    <string name="wait">Please wait...</string>
    <string name="logout">logout</string>

    <string-array name="duration">
        <item>1 месяц</item>
        <item>6 месяцев</item>
        <item>год</item>
    </string-array>

    <string-array name="duration_values">
        <item>31</item>
        <item>183</item>
        <item>365</item>
    </string-array>
</resources>
