<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preferences">

        <EditTextPreference
            android:dialogTitle="@string/address_dialog_title"
            android:key="serverAddress"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:defaultValue="@string/default_ip"
            android:maxLength="15"
            android:title="@string/address_title" />
        <EditTextPreference
            android:dialogTitle="@string/port_dialog_title"
            android:key="serverPort"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:defaultValue="@string/default_port"
            android:maxLength="5"
            android:title="@string/port_title" />

        <ListPreference
            android:defaultValue="31"
            android:entries="@array/duration"
            android:entryValues="@array/duration_values"
            android:key="lengthHistory"
            android:title="@string/history_title" />
    </PreferenceCategory>

</PreferenceScreen>